# splunk-tui

./: .cargo-watch.json  .cursorignore  .dockerignore  .editorconfig  .env.example  .env.test.example  .gitignore  .repo_ignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  clippy.toml  docker-compose.yml  package-lock.json  rust-toolchain.toml  rust_out  rustfmt.toml
.ralph/: README.md  (+3 more)
crates/cli/: Cargo.toml
crates/cli/benches/: formatter_benchmarks.rs
crates/cli/src/: args.rs  cancellation.rs  config_context.rs  dispatch.rs  dynamic_complete.rs  error.rs  formatters.rs  interactive.rs  main.rs  progress.rs  telemetry.rs
crates/cli/src/commands/: alerts.rs  apps.rs  audit.rs  cluster.rs  completions.rs  config.rs  configs.rs  dashboards.rs  datamodels.rs  doctor.rs  forwarders.rs  health.rs  hec.rs  indexes.rs  inputs.rs  internal_logs.rs  jobs.rs  kvstore.rs  license.rs  list_all.rs  logs.rs  lookups.rs  macros.rs  manpage.rs  mod.rs  roles.rs  saved_searches.rs  search.rs  search_peers.rs  shc.rs  transaction.rs  users.rs  workload.rs
crates/cli/src/formatters/: common.rs  csv.rs  json.rs  macros.rs  markdown.rs  mod.rs  ndjson.rs  table.rs  tests.rs  xml.rs  yaml.rs
crates/cli/tests/: apps_tests.rs  cancellation_tests.rs  cluster_pagination_tests.rs  completions_tests.rs  config_loading_tests.rs  config_tests.rs  configs_tests.rs  doctor_tests.rs  dotenv_failure_tests.rs  dotenv_isolation_tests.rs  dynamic_completions_tests.rs  exit_code_tests.rs  file_output_tests.rs  forwarders_tests.rs  health_tests.rs  hec_tests.rs  indexes_management_tests.rs  indexes_pagination_tests.rs  inputs_tests.rs  internal_logs_tests.rs  jobs_tests.rs  kvstore_tests.rs  license_tests.rs  list_all_tests.rs  live_tests.rs  logs_tests.rs  lookups_tests.rs  saved_searches_tests.rs  search_peers_tests.rs  search_tests.rs  search_validate_tests.rs  users_tests.rs
crates/cli/tests/common/: mod.rs
crates/cli/tests/config/: delete_tests.rs  edge_cases_tests.rs  help_tests.rs  keyring_tests.rs  list_tests.rs  mod.rs  secure_input_tests.rs  set_tests.rs  show_tests.rs
crates/cli/tests/list_all/: help_tests.rs  mod.rs  multi_profile_tests.rs  normalization_tests.rs  ordering_tests.rs  output_format_tests.rs  single_profile_tests.rs
crates/client/: Cargo.toml
crates/client/benches/: entry_extraction_benchmarks.rs  model_parsing_benchmarks.rs  serde_helpers_benchmarks.rs
crates/client/fixtures/alerts/: get_fired_alert.json  list_fired_alerts.json
crates/client/fixtures/apps/: get_app.json  install_app.json  list_apps.json  list_apps_empty.json  update_app.json
crates/client/fixtures/auth/: login_invalid_creds.json  login_success.json
crates/client/fixtures/cluster/: get_cluster_info.json
crates/client/fixtures/configs/: get_config_stanza.json  list_config_stanzas.json
crates/client/fixtures/forwarders/: list_forwarders.json
crates/client/fixtures/indexes/: create_index.json  list_indexes.json  modify_index.json
crates/client/fixtures/inputs/: enable_input.json  list_inputs_monitor.json  list_inputs_tcp.json
crates/client/fixtures/jobs/: cancel_job_success.json  list_jobs.json
crates/client/fixtures/kvstore/: status.json
crates/client/fixtures/license/: get_usage.json  list_pools.json  list_stacks.json
crates/client/fixtures/logs/: get_internal_logs.json
crates/client/fixtures/lookups/: list_lookup_tables.json
crates/client/fixtures/macros/: get_macro.json  list_macros.json
crates/client/src/: auth.rs  client.rs  error.rs  format.rs  lib.rs  metrics.rs  metrics_exporter.rs  models.rs  name_merge.rs  serde_helpers.rs  tracing.rs  transaction.rs
crates/client/tests/: alerts_tests.rs  apps_tests.rs  audit_tests.rs  auth_tests.rs  cache_tests.rs  chaos_flapping_tests.rs  chaos_network_tests.rs  chaos_timing_tests.rs  circuit_breaker_integration_tests.rs  cluster_tests.rs  configs_tests.rs  error_recovery_pagination_tests.rs  error_recovery_session_tests.rs  error_recovery_streaming_tests.rs  error_recovery_tests.rs  error_security_tests.rs  error_tests.rs  forwarders_tests.rs  hec_tests.rs  indexes_tests.rs  inputs_tests.rs  integration_security_tests.rs  integration_tests.rs  jobs_tests.rs  kvstore_tests.rs  license_tests.rs  live_tests.rs  logs_tests.rs  lookups_tests.rs  macros_tests.rs  metrics_tests.rs  parsing_tests.rs  progress_callback_tests.rs  property_date_tests.rs  property_pagination_tests.rs  property_serde_helpers_tests.rs  property_serde_tests.rs  retry_5xx_tests.rs  retry_after_header_tests.rs  retry_auth_tests.rs  (+15 more)
crates/config/: Cargo.toml
crates/config/src/: constants.rs  encryption.rs  keybind.rs  lib.rs  loader.rs  persistence.rs  types.rs
crates/config/tests/: corrupt_backup_tests.rs  integration_test.rs  property_config_tests.rs
crates/tui/: Cargo.toml
crates/tui/benches/: export_benchmarks.rs  spawn_overhead.rs  syntax_highlighting_benchmarks.rs
crates/tui/src/: action.rs  app.rs  cli.rs  error_details.rs  event.rs  export.rs  focus.rs  lib.rs  main.rs  telemetry.rs  theme.rs  undo.rs  utils.rs  ux_telemetry.rs
crates/tui/tests/: accessibility_contrast_tests.rs  app_apps_tests.rs  app_batch_tests.rs  app_clipboard_tests.rs  app_configs_tests.rs  app_cursor_tests.rs  app_error_tests.rs  app_indexes_tests.rs  app_input_tests.rs  app_jobs_tests.rs  app_keyevent_tests.rs  app_mouse_tests.rs  app_navigation_tests.rs  app_pagination_stress_tests.rs  app_performance_tests.rs  app_popup_tests.rs  app_progress_tests.rs  app_quit_tests.rs  app_screen_transition_tests.rs  app_search_history_tests.rs  app_search_input_tests.rs  app_search_pagination_tests.rs  app_search_scroll_tests.rs  app_search_tests.rs  app_search_validation_tests.rs  app_session_tests.rs  app_settings_tests.rs  app_status_tests.rs  app_stress_input_tests.rs  app_tests.rs  bootstrap_startup_tests.rs  checklist_tests.rs  cli_tests.rs  config_loading_tests.rs  doc_generation_tests.rs  dotenv_failure_tests.rs  first_run_tests.rs  flex_layout_tests.rs  foundation_tests.rs  helpers.rs  (+40 more)
(+698 files in other folders)
