[workspace]
resolver = "2"
members = ["crates/cli", "crates/tui", "crates/client", "crates/config"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Splunk TUI Contributors"]
license = "MIT"
repository = "https://github.com/fitchmultz/splunk-tui"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.42", features = ["full"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# TUI
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = "0.28"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Secrets
secrecy = { version = "0.10", features = ["serde"] }
keyring = "3.1"

# Config
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
time = { version = "0.3", features = ["serde", "formatting"] }

# Testing
mockito = "1.5"
wiremock = "0.6"
assert_cmd = "2.1"

# Workspace crates
splunk-client = { path = "crates/client" }
splunk-config = { path = "crates/config" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
