[workspace]
resolver = "2"
members = ["crates/cli", "crates/tui", "crates/client", "crates/config", "crates/architecture-tests"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Splunk TUI Contributors"]
license = "MIT"
repository = "https://github.com/fitchmultz/splunk-tui"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.49", features = ["full"] }
futures = "0.3.31"

# HTTP
reqwest = { version = "0.13", features = ["json", "rustls", "query", "form", "multipart"], default-features = false }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# TUI
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = "0.28"
uuid = { version = "1.20", features = ["v4", "serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
csv = "1.4"

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Bitflags
bitflags = "2.8"

# Secrets
secrecy = { version = "0.10", features = ["serde"] }
keyring = "3.6"

# Config
dotenvy = "0.15"
url = "2.5"
directories = "6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenTelemetry
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "trace"] }
opentelemetry-semantic-conventions = "0.31"
tracing-opentelemetry = "0.32"

# Time
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
chrono = { version = "0.4", features = ["serde", "clock"] }

# Caching
moka = { version = "0.12", features = ["future"] }

# Testing
mockall = "0.13"
mockito = "1.7"
proptest = "1.10"
wiremock = "0.6"
assert_cmd = "2.1"
serial_test = "3.3"
criterion = { version = "0.8", features = ["async_tokio"] }
temp-env = "0.3"

# Encryption
aes-gcm = "0.10"
argon2 = "0.5"
hex = "0.4"

# Fake data generation for testing
fake = { version = "4.4", features = ["derive", "chrono"] }
rand = "0.9"

# Workspace crates
splunk-client = { path = "crates/client" }
splunk-config = { path = "crates/config" }

[profile.ci]
inherits = "release"
opt-level = 2
lto = false
codegen-units = 16
strip = false
panic = "unwind"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
