[package]
name = "splunk-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "splunk-cli"
path = "src/main.rs"

[dependencies]
splunk-client = { path = "../client" }
splunk-config = { path = "../config" }

# Async Runtime
tokio = { workspace = true }

# CLI
clap = { workspace = true }
dialoguer = "0.11"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error Handling
anyhow = { workspace = true }

# Secrets
secrecy = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = "3"
tempfile = "3"
keyring = { workspace = true }
