[package]
name = "splunk-client"
version.workspace = true
edition.workspace = true

[dependencies]
splunk-config = { path = "../config" }

# Async Runtime
tokio = { workspace = true }

# HTTP
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Secrets
secrecy = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
time = { workspace = true }

# Metrics
metrics = "0.24"

[dev-dependencies]
dotenvy = { workspace = true }
mockito = { workspace = true }
wiremock = { workspace = true }
tokio-test = "0.4"
