[package]
name = "splunk-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
test-utils = ["proptest"]

[dependencies]
splunk-config = { path = "../config" }

# Async Runtime
tokio = { workspace = true }

# HTTP
reqwest = { workspace = true, features = ["multipart"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Secrets
secrecy = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
time = { workspace = true }

# Metrics
metrics = "0.24"

# URL Encoding
percent-encoding = "2.3"

# Testing (optional, enabled via test-utils feature)
proptest = { workspace = true, optional = true }

[dev-dependencies]
dotenvy = { workspace = true }
proptest = { workspace = true }
mockito = { workspace = true }
wiremock = { workspace = true }
tokio-test = "0.4"
# Enable test-utils feature for integration tests to access testing module
splunk-client = { path = ".", features = ["test-utils"] }
