[package]
name = "splunk-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
secrecy = { workspace = true }
keyring = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
ratatui = { workspace = true }
directories = "6"
tracing = { workspace = true }
url = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
toml = "0.9"
tempfile = "3"
serial_test = { workspace = true }
temp-env = "0.3"
