[package]
name = "splunk-tui"
version.workspace = true
edition.workspace = true

[lib]
name = "splunk_tui"
path = "src/lib.rs"

[[bin]]
name = "splunk-tui"
path = "src/main.rs"

[dependencies]
splunk-client = { path = "../client" }
splunk-config = { path = "../config" }

# Async Runtime
tokio = { workspace = true }
futures-util = "0.3"

# TUI
ratatui = { workspace = true }
crossterm = { workspace = true, features = ["event-stream"] }

# Serialization
serde_json = { workspace = true }

# Error Handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"

[dev-dependencies]
insta = { version = "1.39", features = ["filters"] }
